@@ -1,27 +1,3 @@
-/*
- * The MIT License (MIT)
- *
- *  Copyright © 2025, Alps BTE <bte.atchli@gmail.com>
- *
- *  Permission is hereby granted, free of charge, to any person obtaining a copy
- *  of this software and associated documentation files (the "Software"), to deal
- *  in the Software without restriction, including without limitation the rights
- *  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- *  copies of the Software, and to permit persons to whom the Software is
- *  furnished to do so, subject to the following conditions:
- *
- *  The above copyright notice and this permission notice shall be included in all
- *  copies or substantial portions of the Software.
- *
- *  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- *  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- *  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- *  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- *  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- *  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- *  SOFTWARE.
- */
-
 package com.alpsbte.plotsystem.core.holograms.leaderboards;
 
 import com.alpsbte.alpslib.hologram.DecentHologramPagedDisplay;
@@ -36,13 +12,14 @@ import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
-import java.text.DecimalFormat;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
 
 public class ScoreLeaderboard extends DecentHologramPagedDisplay implements HologramConfiguration {
-    private final DecimalFormat df = new DecimalFormat("#.##");
     private LeaderboardTimeframe sortByLeaderboard;
 
     public ScoreLeaderboard() {
@@ -56,7 +33,7 @@ public class ScoreLeaderboard extends DecentHologramPagedDisplay implements Holo
         if (ConfigUtil.getInstance() == null) return new ArrayList<>();
         FileConfiguration config = PlotSystem.getPlugin().getConfig();
         return Arrays.stream(LeaderboardTimeframe.values())
-                .filter(p -> config.getBoolean(p.configPath)).map(LeaderboardTimeframe::toString).collect(Collectors.toList());
+                .filter(p -> config.getBoolean(p.configPath)).map(LeaderboardTimeframe::toString).toList();
     }
 
     @Override
@@ -99,13 +76,11 @@ public class ScoreLeaderboard extends DecentHologramPagedDisplay implements Holo
             lines.add(new HologramRegister.LeaderboardPositionLine(index + 1, null, 0));
         }
 
-        LinkedHashMap<String, Integer> playerRankings = DataProvider.BUILDER.getLeaderboardEntries(sortByLeaderboard);
-        if (playerRankings != null) {
-            int i = 0;
-            for (Map.Entry<String, Integer> entry : playerRankings.entrySet()) {
-                lines.set(i, new HologramRegister.LeaderboardPositionLine(i + 1, entry.getKey(), entry.getValue()));
-                i++;
-            }
+        Map<String, Integer> playerRankings = DataProvider.BUILDER.getLeaderboardEntries(sortByLeaderboard);
+        int i = 0;
+        for (Map.Entry<String, Integer> entry : playerRankings.entrySet()) {
+            lines.set(i, new HologramRegister.LeaderboardPositionLine(i + 1, entry.getKey(), entry.getValue()));
+            i++;
         }
         return lines;
     }
